  
[package]
edition = "2018"
name = "tip_100"
description = "This is a contract compatible with the TIP-100 standard for ISCP (IOTA Smart Contract Protocol)"
license = "MIT"
version = "0.2.0"
authors = ["Th3B0Y <constantlychanging@pm.me>"]
repository = "https://github.com/brunoamancio/IOTA-SC-TIP100"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

wasmlib = { git = "https://github.com/brunoamancio/Wasm-lib", tag="v0.1.0" }
iota_sc_utils = { git = "https://github.com/brunoamancio/IOTA-SC-Utils", tag = "v0.8.4"}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"