  
[package]
edition = "2018"
name = "not_tip_100"
description = "This is a contract incompatible with the TIP-100 standard for ISCP (IOTA Smart Contract Protocol)"
license = "MIT"
version = "1.0.0"
authors = ["Th3B0Y <constantlychanging@pm.me>"]
repository = "https://github.com/brunoamancio/IOTA-SC-TIP100"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

wasmlib = { git = "https://github.com/brunoamancio/Wasm-lib", tag="v0.1.0" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"